<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarStyle="outsideOverlay"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BoreLogGeneralInfo" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <TextView
            android:id="@+id/generalInfo_Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bore_journal_job_info"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"
            android:paddingStart="5dp"
            android:background="@drawable/red_background" />

        <TextView
            android:id="@+id/generalInfo_SubHeader"
            android:layout_below="@+id/generalInfo_Header"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/enter_some_general_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sub_header_text_size"
            android:layout_margin="2dp"
            android:padding="2dp"/>

        <LinearLayout
            android:id="@+id/generalInfo_customerLinearLayout"
            android:layout_below="@+id/generalInfo_SubHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:padding="2dp">
            <TextView
                android:id="@+id/generalInfo_customerTextView"
                android:text="@string/bore_journal_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <EditText
                android:id="@+id/generalInfo_customerEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/customer_hint"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/generalInfo_locationEditText"
                android:padding="10dp"
                android:background="@drawable/border_redline"/>
            <requestFocus/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/generalInfo_locationLinearLayout"
            android:layout_below="@+id/generalInfo_customerLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:padding="2dp">
            <TextView
                android:id="@+id/generalInfo_locationTextView"
                android:text="@string/location_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/generalInfo_locationEditText"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/location_hint"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/generalInfo_datePicker"
                android:padding="10dp"
                android:background="@drawable/border_redline" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/generalInfo_dateLinearLayout"
            android:layout_below="@+id/generalInfo_locationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="2dp">
            <TextView
                android:id="@+id/generalInfo_dateTextView"
                android:text="@string/bore_journal_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"/>
            <DatePicker
                android:id="@+id/generalInfo_datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:padding="0dp"
                android:background="@drawable/border_redline"/>
        </LinearLayout>
        <Button
            android:id="@+id/generalInfo_doneButton"
            android:layout_below="@+id/generalInfo_dateLinearLayout"
            android:text="@string/enterInfo"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/list_files_button"/>
    </RelativeLayout>
</ScrollView>