...
            android:text="@string/bore_journal_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

        <Button
            android:id="@+id/continue_bore_journal_button"
            android:layout_below="@+id/new_bore_journal_button"
            android:text="@string/continue_bore_journal"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/list_files_button"/>

...
